multi_index_map_derive2/tests/ui/no_index.stderr
error: MultiIndexMap2 requires at least one #[multi_index(...)] field
 --> tests/ui/no_index.rs:4:8
  |
4 | struct NoIndex {
  |        ^^^^^^^
