multi_index_map_derive2/tests/ui/no_index.rs
use multi_index_map_derive2::MultiIndexMap;

#[derive(MultiIndexMap)]
struct NoIndex {
    value: u64,
}

fn main() {}
